[gd_scene load_steps=41 format=3 uid="uid://mirrhf6qgo8s"]

[ext_resource type="Script" uid="uid://bgiuqjm5uqbnp" path="res://scripts/player.gd" id="1_merdl"]
[ext_resource type="Texture2D" uid="uid://bopbrfrsgmet8" path="res://sprites/2-robot/Idle.png" id="2_b0kkn"]
[ext_resource type="Texture2D" uid="uid://dukv6grtca70o" path="res://sprites/2-robot/Fall.png" id="2_qly61"]
[ext_resource type="Texture2D" uid="uid://bh7567gkf6hx8" path="res://sprites/2-robot/Hit.png" id="2_qsoyl"]
[ext_resource type="Texture2D" uid="uid://buxfnc6ukjggq" path="res://sprites/2-robot/Run.png" id="3_e4p34"]
[ext_resource type="Texture2D" uid="uid://b6qk3ecy4ukvb" path="res://sprites/2-robot/Jump.png" id="3_rfe5m"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u3f3p"]
radius = 7.0
height = 24.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7db53"]
atlas = ExtResource("2_qsoyl")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_plaij"]
atlas = ExtResource("2_qsoyl")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib8tg"]
atlas = ExtResource("2_qsoyl")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcwxb"]
atlas = ExtResource("2_qsoyl")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2i2q"]
atlas = ExtResource("2_qsoyl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdqif"]
atlas = ExtResource("2_qsoyl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_egchw"]
atlas = ExtResource("2_qsoyl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4p34"]
atlas = ExtResource("2_b0kkn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfe5m"]
atlas = ExtResource("2_b0kkn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qly61"]
atlas = ExtResource("2_b0kkn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsoyl"]
atlas = ExtResource("2_b0kkn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nm46"]
atlas = ExtResource("2_b0kkn")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i623q"]
atlas = ExtResource("2_b0kkn")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef06p"]
atlas = ExtResource("2_b0kkn")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjdhl"]
atlas = ExtResource("2_b0kkn")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x08pd"]
atlas = ExtResource("2_b0kkn")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dchgp"]
atlas = ExtResource("2_b0kkn")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdgjc"]
atlas = ExtResource("2_b0kkn")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_evlff"]
atlas = ExtResource("3_rfe5m")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0i8f"]
atlas = ExtResource("3_e4p34")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i614"]
atlas = ExtResource("3_e4p34")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprnr"]
atlas = ExtResource("3_e4p34")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rie4"]
atlas = ExtResource("3_e4p34")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp3pk"]
atlas = ExtResource("3_e4p34")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgp7q"]
atlas = ExtResource("3_e4p34")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n8aq"]
atlas = ExtResource("3_e4p34")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_28s6d"]
atlas = ExtResource("3_e4p34")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cicqb"]
atlas = ExtResource("3_e4p34")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj0ki"]
atlas = ExtResource("3_e4p34")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fruft"]
atlas = ExtResource("3_e4p34")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_slxql"]
atlas = ExtResource("3_e4p34")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_q0i8f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7db53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plaij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib8tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcwxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2i2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdqif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egchw")
}],
"loop": false,
"name": &"dead",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qly61")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4p34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfe5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qly61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsoyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nm46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i623q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef06p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjdhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x08pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dchgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdgjc")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_evlff")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0i8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i614")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rie4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp3pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgp7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n8aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28s6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cicqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj0ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fruft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slxql")
}],
"loop": true,
"name": &"walk",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ykqge"]
radius = 11.0
height = 27.0

[node name="PLayer" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_merdl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_u3f3p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_q0i8f")
animation = &"dead"

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_ykqge")
debug_color = Color(0.92431134, 4.890084e-05, 0.68242043, 0.41960785)

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
